fix: form height on small screen

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -57,7 +57,7 @@ input {
 
 .main-form {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,7 +71,7 @@ input {
 }
 
 .main-form > .button {
-  margin-top: 2rem;
+  margin-block: 2rem;
 }
 
 .main-form::before {
